name:                conduit-binary
version:             1.0
synopsis:            data serialization/deserialization conduit library
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
copyright:           2013 Alexander Vershilov
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     
    Data.Conduit.Serialization.Binary
  -- other-modules:       
  build-depends:       base >=4.4 && <4.7,
                       conduit >= 1.0 && < 1.1,
                       bytestring >= 0.9 && < 10.3,
                       binary >= 0.6 && < 0.8
  ghc-options: -Wall -O2
